[project]
name = "ComfyUI-llamacpp-Unloader"
description = "Unload llama.cpp models from VRAM to free GPU memory in ComfyUI."
version = "1.0.2"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/schroldgames/ComfyUI-llamacpp-Unloader"

[tool.comfy]
PublisherId = "schroldgames"
DisplayName = "ComfyUI-llamacpp-Unloader"
